Sucessfully removed duplicates

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 kaggle-datasets/The-Enron-Email-Dataset/emails.csv
 Processed-Datasets/Enron-Bodies/emails.csv
+Processed-Datasets/Enron-Bodies/enron-ham-only.csv
 Pickle/*
