--- a/DataLabelling/package.json
+++ b/DataLabelling/package.json
@@ -1,6 +1,7 @@
 {
   "name": "datalabelling",
   "version": "0.0.0",
+  "description": "Portal for labelling data for semantic analysis",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -12,5 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
-  }
+  },
+  "author": "Twigonometry",
+  "license": "ISC"
 }
