--- a/datalabelling/datalabelling/package.json
+++ b/datalabelling/datalabelling/package.json
@@ -1,7 +1,6 @@
 {
   "name": "datalabelling",
   "version": "0.0.0",
-  "description": "Portal for labelling data for semantic analysis",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -11,9 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
-  },
-  "author": "Twigonometry",
-  "license": "ISC"
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
+  }
 }
