--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ kaggle-datasets/The-Enron-Email-Dataset/emails.csv
 Processed-Datasets/Enron-Bodies/emails.csv
 Processed-Datasets/Enron-Bodies/enron-ham-only.csv
 Pickle/*
+node_modules
