--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 kaggle-datasets/The-Enron-Email-Dataset/emails.csv
 Processed-Datasets/Enron-Bodies/emails.csv
 Processed-Datasets/Enron-Bodies/enron-ham-only.csv
+Processed-Datasets/all-bodies.csv
 Pickle/*
