--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ kaggle-datasets/The-Enron-Email-Dataset/emails.csv
 Processed-Datasets/Enron-Bodies/emails.csv
 Processed-Datasets/Enron-Bodies/enron-ham-only.csv
 Processed-Datasets/all-bodies.csv
+Processed-Datasets/all-preprocessed.csv
 Pickle/*
